[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrapling-enhanced"
version = "0.1.0"
description = "Scrapling with native Camoufox browser integration"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "scrapling>=0.4",
    "camoufox>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/scrapling_enhanced"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring a real Camoufox browser",
]

[tool.ruff]
target-version = "py310"
src = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
